@@ -11,10 +11,13 @@ files = **TODO: SPECIFY INPUT FILES OR DATA SOURCE HERE**
 ######################################################################
 [Translator.H5Output]
 
+# The only option you need to set for the Translator.H5Output module is
+# output_file. All other options have default values (explained below).
+
 # TODO: enter the full h5 output file name, including the output directory
 output_file = output_directory/h5output.h5
 
-# by default, the Translator will not overwrite the h5 file if it already exists
+# By default, the Translator will not overwrite the h5 file if it already exists
 overwrite = false
 
 # # # # # # # # # # # # # # # # # # # # #
@@ -29,17 +32,31 @@ overwrite = false
 #
 # calib_repeat   each calib cycle will include the latest value of all the epics 
 #                pv's.  This can make it easier to find pv's for a calib cycle. 
-#                For experiments with many short calib cycles, it can degrade 
-#                performance of translation and performance when working with the 
-#                resulting hdf5 file.
+#                For experiments with many short calib cycles, it produces 
+#                many more datasets than neccessary.
 #
 # no             epics pv's will not be stored. You may also want to set Epics=exclude
 #                (see below) if you do not want the epics configuration data stored
 
-# The default is 'updates_only'
+# The default is 'calib_repeat'
 
-store_epics = updates_only
+store_epics = calib_repeat
 
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+# FILTERING
+# 
+# By default, all xtc data is Translated and many ndarrays that user modules (if any) 
+# add are translated. Filtering can occur in either the code of user modules, or
+# through options in the psana.cfg file. Here in the config file, different groups of 
+# data can be filtered. There are two options for filtering xtc data: type filtering or 
+# source filtering. Type filtering is based on sets of Psana data types. If you know 
+# what detectors or devices to filter, leave type filtering alone and go to src_filter. 
+#
+# When the translator sees new data, it first checks if it is a known type that
+# has not been filtered. For unfiltered known types, the translator next checks
+# if there is a filter on the Source. Finally, for ndarray's and strings, it checks 
+# if there is a filter on the key string that identifies the data in the Psana event store.
+#
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # TYPE FILTERING 
 #
@@ -48,7 +65,8 @@ store_epics = updates_only
 # type filtering options. 
 # 
 # Note - Epics in the list below refers only to the epicsConfig data
-# which is the epics alias list, not the epics pv's (see store_epics above for those)
+# which is the epics alias list, not the epics pv's. To filter the epics pv's
+# see the 'store_epics' option above.
 
 AcqTdc = include               # Psana::Acqiris::TdcConfigV1, Psana::Acqiris::TdcDataV1
 AcqWaveform = include          # Psana::Acqiris::ConfigV1, Psana::Acqiris::DataDescV1
@@ -102,6 +120,30 @@ ndarray_types = include        # ndarray<int8_t,1>, ndarray<int8_t,2>, ndarray<i
 std_string = include           # std::string
 
 
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+# TYPE FILTER SHORTCUT
+#
+# In addition to filtering Psana types by the options above, one can use
+# the type_filter option below. For example:
+#
+# type_filter include cspad       # will only translate cspad types. Will not translate
+#                                 # ndarrays or strings
+# type_filter exclude Andor evr   # translate all except the Andor or Evr types
+# 
+# If you do not want to translate what is in the xtc file, use the psana shortcut:
+#
+# type_filter exclude psana       # This will only translate ndarray's and strings 
+#
+# Likewise doing:
+#
+# type_filter include psana       # will translate all xtc data, but skip any ndarray's or strings
+#
+# The default is to include all
+
+type_filter include all
+
+# note - if type_filter is anything other than 'include all' it takes precedence
+# over the classes of type filter options above, like Cspad=include.
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # SOURCE FILTERING
@@ -143,7 +185,7 @@ std_string = include           # std::string
 # A simple way to set up src filtering is to take a look at the sources in the 
 # xtc input using the psana EventKeys module.  For example
 #
-# psana -n 5 -m EventKeys exp=cxi1235:run=33 
+# psana -n 5 -m EventKeys exp=cxitut13:run=22 
 #
 # Will print the EventKeys in the first 5 events.  If the output includes
 #
